# XG_ws

./: README.md
Control/tracking/: CMakeLists.txt  package.xml
Control/tracking/config/: param_HS.yaml  param_LS.yaml
Control/tracking/launch/: tracking.launch
Control/tracking/src/: core_path_follow.cpp  main_path_follow.cpp  pub_path_follow.cpp  sub_path_follow.cpp
Control/tracking_obs_cross/: CMakeLists.txt  README.md  package.xml
Control/tracking_obs_cross/config/: param_OC.yaml
Control/tracking_obs_cross/launch/: tracking_oc.launch
Control/tracking_obs_cross/src/: core_path_follow_oc.cpp  main_path_follow_oc copy.cpp  main_path_follow_oc.cpp  pub_path_follow_oc copy.cpp  pub_path_follow_oc.cpp  sub_path_follow_oc copy.cpp  sub_path_follow_oc.cpp
Localization/ndt_localizer/: CMakeLists.txt  README-chinese.md  package.xml
Localization/ndt_localizer/config/: ndt_localizer.rviz
Localization/ndt_localizer/include/ndt_localizer/: map_loader.h  ndt_localizer_core.h
Localization/ndt_localizer/launch/: all_start.launch  map_loader.launch  ndt_localizer_core.launch
Localization/ndt_localizer/src/: map_loader.cpp  ndt_localizer_core.cpp
Planning/global_planning/: CMakeLists.txt  package.xml
Planning/global_planning/include/: collisiondetection.h  constants.h  path.h  planner.h  smoother.h
Planning/global_planning/launch/: global_planning.launch
Planning/global_planning/node/: global_planning_node.cpp
Planning/global_planning/src/: algorithm.cpp  collisiondetection.cpp  node3d.cpp  path.cpp  planner.cpp  smoother.cpp  visualize.cpp
Planning/global_planning_obs_cross/: CMakeLists.txt  package.xml
Planning/global_planning_obs_cross/include/global_planning_obs_cross/: collisiondetection.h  constants_ori_backup.h  dynamicvoronoi.h  path.h  planner.h  visualize.h
Planning/global_planning_obs_cross/launch/: global_planning.launch
Planning/global_planning_obs_cross/node/: global_planning_node.cpp
Planning/global_planning_obs_cross/src/: algorithm.cpp  bucketedqueue.cpp  collisiondetection.cpp  dubins.cpp  dynamicvoronoi.cpp  node2d.cpp  node3d.cpp  path.cpp  planner.cpp  smoother.cpp  visualize.cpp
Planning/grid_cost_map_obs_cross/: CMakeLists.txt  package.xml
Planning/grid_cost_map_obs_cross/config/: global_map_filter_chain.yaml
Planning/grid_cost_map_obs_cross/launch/: start.launch
Planning/local_planning/: CMakeLists.txt  package.xml
SLAM/LeGO_LOAM/: README.md
SLAM/LeGO_LOAM/cloud_msgs/: CMakeLists.txt  package.xml
SLAM/LeGO_LOAM/cloud_msgs/msg/: cloud_info.msg
SLAM/lidar_preprocess/: CMakeLists.txt  README.md  package.xml
SLAM/map_saver/: CMakeLists.txt  package.xml
UWB/path_generator/: CMakeLists.txt  package.xml  readme.md  topiclist.md
UWB/path_tracking/: CMakeLists.txt  package.xml  readme.md  topiclist.md
UWB/uwb_follow/: CMakeLists.txt  package.xml  readme.md  topiclist.md
Veh_io/daheng_ros/: CMakeLists.txt  README.md
Veh_io/daheng_ros/include/: GxIAPI.h  daheng.h
Veh_io/daheng_ros/launch/: binocular.launch  camera.launch
Veh_io/daheng_ros/src/: daheng.cpp
Veh_io/rslidar_ros/: README.md
Veh_io/serial_unpack/: CMakeLists.txt  package.xml
Veh_io/uwb_unpack/: CMakeLists.txt  package.xml  readme.md  topiclist.md
Veh_io/vehicle_control/: CMakeLists.txt  package.xml  readme.md  topiclist.md
common/: CMakeLists.txt  package.xml
common/csv/: cmd-15km.csv  cmd.csv  imu_gnss-15km.csv  imu_gnss.csv
common/launch/: generate_csv_for_plot.launch  imu_calibration.launch  map_calibration.launch  sensors_static_tf.launch  veh_model.launch
common/map/: 1.pcd  2.pcd  2024-6-4_16-28-4.pcd  2024-6-4_16-44-6.pcd  2024-6-4_16-48-54.pcd  2024-6-4_16-57-20.pcd  2024-6-6_16-22-32.pcd  3.pcd  4.pcd  README.md  config(复件).yaml  config.yaml
common/rviz/: localization.rviz  map_calibration.rviz  planning.rviz  slam.rviz
common/src/: generate_csv_for_plot.cpp  imu_calibration.cpp  imugnss_cmd_plot.m  map_calibration.cpp
common/srv/: MapCalibration.srv
common/urdf/: XG-veh.stl  veh_model.urdf
running/: CMakeLists.txt  package.xml  readme.md
running/launch/: auto_drive.launch  auto_drive_obs_cross.launch  bag_auto_drive.launch  bag_auto_drive_obs_cross.launch  bag_localization.launch  bag_planning.launch  bag_record.launch  bag_slam.launch  follow_XUV25B.launch  follow_scoutmini.launch  localization.launch  map_saver.launch  planning.launch  slam.launch
(+97 files in other folders)
